--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,6 @@
 
 /* Your CSS Code here. */
+<div>
+   <button data-ns-test="block-inline-button">Test1</button>
+   <button data-ns-test="block-inline-button">Test2</button>
+</div>
